Patches required to get DiscoServer running locally
There were a few missing files & version issues I needed to resolve
before  DiscoServer.py would run (and the UI would work).

- `control_interface/js/init.js` was missing
- The version of Handlebars specified by
  `control_interface/package.json` was `latest`. Handlebars is
  absolutely terrible at being backwards compatible..

I also set up a `requirements.txt` file for pip (based on what I have
installed on my system). And updated `README.md` with some extra bits I
wanted to know while setting it up.

--- a/control_interface/package.json
+++ b/control_interface/package.json
@@ -6,7 +6,7 @@
     "grunt": "~0.4.1",
     "grunt-contrib-watch": "~0.4.0",
     "grunt-contrib-coffee": "latest",
-    "grunt-contrib-handlebars": "latest",
+    "grunt-contrib-handlebars": "0.8.0",
     "grunt-contrib-sass": "latest",
     "matchdep": "~0.1.1"
   },
